test/black-box/v3/6.exp
[Line 4] Semantic error: Identifier a already used for declaration.