test/black-box/v3/6.toc
# Funcao principal do programa
void toc()
  int a = 9
  boo a = 10